--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
 	<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light">
-		  <a class="navbar-brand" href="#">NAME</a>
+		  <a class="navbar-brand" href="#total">NAME</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -26,25 +26,25 @@
 			          Тюмень
 			        </a>
 			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			          <a class="dropdown-item" href="#">Екатеринбург</a>
+			          <a class="dropdown-item">Екатеринбург</a>
 
-			          <a class="dropdown-item" href="#">Сургут</a>
+			          <a class="dropdown-item">Сургут</a>
 		      	</li>
 
 			    <li class="nav-item">
-			    	<a class="nav-link" href="#">Квартиры</a>
+			    	<a class="nav-link" href="#kvart">Квартиры</a>
 			    </li>
 
 			    <li class="nav-item">
-			    	<a class="nav-link" href="#">Карта</a>
+			    	<a class="nav-link" href="#map">Карта</a>
 			    </li>
 
 			    <li class="nav-item">
-			    	<a class="nav-link" href="#">Приемущества</a>
+			    	<a class="nav-link" href="#bonus">Приемущества</a>
 			    </li>
 
 			    <li class="nav-item">
-			    	<a class="nav-link nth-child(1)" href="#">Контакты</a>
+			    	<a class="nav-link nth-child(1)" href="#contacts">Контакты</a>
 			    </li>
 		    </ul>
 		  </div>
@@ -52,7 +52,7 @@
 	</div>
 </header>
 
-<section class="main__banner">
+<section id="total" class="main__banner">
 	<div class="container">
 		<h1>Посуточная<br>аренда квартир</h1>
 
@@ -60,9 +60,7 @@
 			Уютные аппартаменты по<br>доступным ценам
 		</p>
 
-		<p class="main__banner__numberTel">
-			+7 000 - 00 - 00
-		</p>
+		<a class="main__banner__numberTel" href="tel:+79220415427">+7(922)-041-54-27</a><a class="main__banner__numberTel" href="tel:+79220415427"></a>
 	</div>
 </section>
 
@@ -89,9 +87,9 @@
 				</div>
 			</div>
 
-			<h2>Наши предложения</h2>
+			<h2 id="kvart">Наши предложения</h2>
 
-			<div class="content__items row">
+			<div  class="content__items row">
 <!----><!----><!----><!----><!----><!----><!----><!---->				<!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->
 				<div class="card col-lg-5 col-md-5 col-12">
 				  <div id="carouselExampleControls__1" data-interval="false"  class="carousel slide" data-ride="carousel">
@@ -160,9 +158,9 @@
 
 
 				  <div class="card-body">
-				    <h5 class="card-title">Цена</h5>
-				    <p class="card-text">Адрес:</p>
-				    <p class="card-text">Комнаты:</p>
+				    <h5 class="card-title">1500 р/сутки</h5>
+				    <p class="card-text">Адрес: ул.Федюнинского д.64 к.2</p>
+				    <p class="card-text">Количество комнат: 1 - 42м<sup>2</sup></p>
 				  </div>
 			</div>
 <!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->			
@@ -226,9 +224,9 @@
 
 
 				  <div class="card-body">
-				    <h5 class="card-title">Цена</h5>
-				    <p class="card-text">Адрес:</p>
-				    <p class="card-text">Комнаты:</p>
+				    <h5 class="card-title">3000 р/сутки</h5>
+				    <p class="card-text">Адрес: ул.Михаила Сперанского д.17</p>
+				    <p class="card-text">Количество комнат: 1+1 - 42м<sup>2</sup></p>
 				  </div>
 			</div>
 <!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->
@@ -264,9 +262,9 @@
 
 
 				  <div class="card-body">
-				    <h5 class="card-title">Цена</h5>
-				    <p class="card-text">Адрес:</p>
-				    <p class="card-text">Комнаты:</p>
+				    <h5 class="card-title">1500 р/сутки</h5>
+				    <p class="card-text">Адрес: ул.Пермякова д.81</p>
+				    <p class="card-text">Количество комнат: 1 - 38м<sup>2</sup></p>
 				  </div>
 			</div>
 <!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->	
@@ -394,7 +392,7 @@
 			<scrisspt type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaaa5f7ac713de219a90844139e0e0ffc0e75fc68f451758e5c726dab2507373a&amp;width=100%25&amp;height=600&amp;lang=ru_RU&amp;scroll=true"></script>
 			</div>
 
-			<div class="info-block">
+			<div id="bonus" class="info-block">
 				<h2>почему лучше снять квартиру чем номер в отеле?</h2>
 
 				<div class="info-block__items row">
@@ -423,23 +421,23 @@
 			</div>
 		</div>
 
-		<div class="contacts">
+		<div id="contacts" class="contacts">
 			<h2>Связь с нами</h2>
 
-			<div class="contacts-block">
+			<div  class="contacts-block">
 				<div class="contacts-block__form row">
 					<form class="contacts-block__form__block col-lg-7 col-12" action="" class="">
 						<h4>
 							Оставьте заявку на бесплатную консультацию и подбор квартиры на нужую дату
 						</h4>
 
-						<input type="name" placeholder="Имя">
+						<input required type="name" placeholder="Имя">
 
-						<input type="tel" placeholder="Номер телефона">
+						<input required type="tel" placeholder="Номер телефона">
 
-						<input type="data" placeholder="Когда">
+						<input required type="data" placeholder="Когда">
 
-						<textarea placeholder="Коментарий" id="exampleFormControlTextarea1" cols="4" rows="6"></textarea>
+						<textarea required placeholder="Коментарий" id="exampleFormControlTextarea1" cols="4" rows="6"></textarea>
 
 						<label for="check"><a href="https://multiviza.com/sites/default/files/%D0%A1%D0%BE%D0%B3%D0%BB%D0%B0%D1%81%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BE%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D1%83%20%D0%BF%D0%B5%D1%80%D1%81%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D1%85%20%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85.pdf">Я согласен с обработкой персональных данныx</a></label>
 
@@ -450,12 +448,17 @@
 
 					<div class="contacts-block__form__call col-lg-5 col-12">
 						<h3>Или позвоните сами!</h3>
-						<p>+7 000 - 00 - 00</p>
-						<p>+7 000 - 00 - 00</p>
-						<p>+7 000 - 00 - 00</p>
+						<a href="tel:+79220415427">+7(922)-041-54-27</a>
+
+						<a href="tel:+79617799458">+7(961)-779-94-58</a>
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<div id="map" class="aboutUs-block__map">
+				<p>Нет соединения с интернетом</p>
+				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaaa5f7ac713de219a90844139e0e0ffc0e75fc68f451758e5c726dab2507373a&amp;width=100%&amp;height=800&amp;lang=ru_RU&amp;scroll=true"></script>
 		</div>
 	</div>
 </section>
