Сделана карта, сделан плавный скролл блоков

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
 		<div id="map" class="aboutUs-block__map">
 				<p>Нет соединения с интернетом</p>
-				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaaa5f7ac713de219a90844139e0e0ffc0e75fc68f451758e5c726dab2507373a&amp;width=100%&amp;height=800&amp;lang=ru_RU&amp;scroll=true"></script>
+				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af2de70fb91113af23fdf7e10347bc61ebc15202f45997017aac5083435ed8668&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 		</div>
 	</div>
 </section>
@@ -493,3 +493,10 @@
 </script>
 </body>
 </html>
+
+
+<!--Карта яндекса
+	*Создать новую
+	http://yandex.ru/clck/jsredir?bu=8vkg3j&from=yandex.ru%3Bsearch%2F%3Bweb%3B%3B&text=&etext=8739.4ffBRdrFb3dFEtmrD_gMjbwjrVY28W3n_1dD0tz-ehzGXsWUlk6zKUc0fqPdTu9TcyHjBOHHWj571dhDZUD4mYQzmqFENuuD7lrrf-G4fHcZ_3GTwmlI76chDc8zM6uZ.c4359a689f49abd0513774f5f8f3270ba4415ccf&uuid=&state=PEtFfuTeVD5kpHnK9lio9dFa2ePbDzX7sdpoY4CdtdgxLYsTNjk9xbHNmc71fHrFggt7zgnyQpHdbmLEZ2aQaqYBDVHYLUZvWI6VTOkVdNBbQAa4sl4sWg,,&&cst=AiuY0DBWFJ4BWM_uhLTTxHStnBkbCrml17Sbvm_ei_8e-SgpFNfVEXAXOLsWA70p3JnuLpAq5o9U1E5t_lZZGOwp_whdYFMf6VyTXo5K2wctUDBie-OTVQ0jrWy-leDL7TMkBMQWo7kB9d4eranx3Q38dL4unvElAh_n2mVxg0dMbOR8Cgy3Vq_lwcdJlT5DyPMu6qF4jAcmq3mPeOMeupYx_6bI1wDjQuWyncbotrDGID_N4nQKG8TcDrYHkGAyfEqScJvN64RssDTYx79jBEm9h44FKUyVJopQ5RKV5ma90C-qVxnpzmcwQ9ScmK6LttLH8C2TSFKcD-00D3We68hZGR1SNukoHKxr3wYGn8e9sapIIef1VlIOCNeJEIMyQP_5L3Zz52KMs26RiI9M2Jv_5ri63tOAzAyDrgBRQqU-dfOV0RmnYDgTKmuF95b7B80EZy9dAz0VHQ71ba6Fcn6rHbeftbDJrF7Zje27TC4lhi_aui1ZwFsyTyJV25likEwPtbKUi18YS5ruFPkKjV92ZIhgPVxFV9zFEW14tYu1LfWfS4keC8kTCDg_QoAFmL2-xwiiTLqdiU7Ce4ZZTFF33YR2POLmcBq_lxKKAyo8Eke3hk1AeiwBZYkHjqgFRrGw39Kdr5fiLvPlelAPDzXO4CzYa8PvkfwCkAHw-i3gwTCvZB-Bv3ePpM4rEPgCrU-jTbVu3DN_6XDT3A3PjLQYDPKeLQ17OA1mD5ItCjz5F726_idY-FHTP_hjKEVL76N8adFIJdcC7vomlrkgDmETQjl1hGp2x25STCR0AO6l6qdqGRy9e5dBTH6SNaCKhRhvY-POOqlo1vM6hBJCv5XjbcRHufOBx6KRwXHnImDFwvA6fX4zIOQmlsAp3dYM6PBkMxBQZE_XVFlFCVdjG9U5zRyo_fxXGXT32csLCVlHHKTMByV6yKyekiX68hCVeQLnvqwY34u0BC_h4O0GuFgk7SeX9oUB&data=UlNrNmk5WktYejY4cHFySjRXSWhXTWRwNjROVUR3SGZQa1ZuMUZoU3A1VGwyWmRnTU1DRHF4OWp2Mkl2MGwtX09CdHA2aGNWeGQ0NXoySjdmM2NQRlpNUjZZNHJnR3FyVTA0eWRObG93ZHdiWEUwOElpYmVqUSws&sign=af7a04effb072224a987647f99956b9c&keyno=0&b64e=2&ref=orjY4mGPRjk5boDnW0uvlrrd71vZw9kpVBUyA8nmgRGGniRDizg1qX6U4gA2S8YSjg0FoE0UTQGfxzSWVuwUijL5VHLbO29vphOfGziM-MImEFeHunH0--NXv8xU-pF3DD2Uq81_WLb5u7IAAxx98S7fWLhXIE_QdFwjCKZMoUnrCy96tn9ntsNUMTG8F3y1lnFm4TidPqj4ePN1UUkVRUonOeEADLJGEv7Zn2IaQCKKOqHGEtjaDRt8j5901hDE_44Gi1hGWm6Ez6httAl7aWekd6taxP_m&l10n=ru&rp=1&cts=1574998419499%40%40events%3D%5B%7B%22event%22%3A%22click%22%2C%22id%22%3A%228vkg3j%22%2C%22cts%22%3A1574998419499%2C%22fast%22%3A%7B%22organic%22%3A1%7D%2C%22service%22%3A%22web%22%2C%22event-id%22%3A%22k3jle6974k%22%7D%5D&mc=3.584962500721156&hdtime=503695.48
+	*Cылка на текущую
+	https://yandex.ru/maps/?um=constructor%3Af2de70fb91113af23fdf7e10347bc61ebc15202f45997017aac5083435ed8668&source=constructorLink -->
