--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+	<link href="./img/total-icon.ico" rel="shortcut icon" type="image/x-icon" />
 	<link rel="stylesheet" href="./style/bootstrap.css"><!--BOOTSTRAp-->
-
+	<title>Визит</title>
 	<link rel="stylesheet" type="text/css" href="./style/main.css"><!--CSS__local-->
 	<title></title>
 </head>
@@ -14,7 +15,7 @@
 <header>
 	<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light">
-		  <a class="navbar-brand" href="#total">NAME</a>
+		  <a class="navbar-brand" href="#total">Визит</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -26,7 +27,7 @@
 			          Тюмень
 			        </a>
 			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			          <a class="dropdown-item">Екатеринбург</a>
+			          <a class="dropdown-item hre" href="form.html">Екатеринбург</a>
 
 			          <a class="dropdown-item">Сургут</a>
 		      	</li>
@@ -426,24 +427,27 @@
 
 			<div  class="contacts-block">
 				<div class="contacts-block__form row">
-					<form class="contacts-block__form__block col-lg-7 col-12" action="" class="">
+					<form class="contacts-block__form__block col-lg-7 col-12" action="send.php" method="post">
 						<h4>
 							Оставьте заявку на бесплатную консультацию и подбор квартиры на нужую дату
 						</h4>
 
-						<input required type="name" placeholder="Имя">
+						<input required type="text" name="fio" placeholder="Имя">
 
-						<input required type="tel" placeholder="Номер телефона">
+						<input required type="text" name="email" placeholder="Номер телефона">
 
 						<input required type="data" placeholder="Когда">
 
-						<textarea required placeholder="Коментарий" id="exampleFormControlTextarea1" cols="4" rows="6"></textarea>
+						<textarea name="message" required placeholder="Коментарий" id="exampleFormControlTextarea1" cols="4" rows="6"></textarea>
+
 
 						<label for="check"><a href="https://multiviza.com/sites/default/files/%D0%A1%D0%BE%D0%B3%D0%BB%D0%B0%D1%81%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BE%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D1%83%20%D0%BF%D0%B5%D1%80%D1%81%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D1%85%20%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85.pdf">Я согласен с обработкой персональных данныx</a></label>
 
 						<input type="checkbox" id="check">
 
-						<input id="form-button" type="submit" value="заказать звонок">
+						<input name="submit" id="form-button" type="submit" value="заказать звонок">
+
+						<div class="g-recaptcha" data-sitekey="6LezM8UUAAAAAN4rLpi5cLSaFLTYyPUup_E4ryTm"></div>
 					</form>
 
 					<div class="contacts-block__form__call col-lg-5 col-12">
